--- a/index.Rmd
+++ b/index.Rmd
@@ -6,9 +6,7 @@ bibliography: [book.bib, packages.bib]
 # url: your book url like https://bookdown.org/yihui/bookdown
 # cover-image: path to the social sharing image like images/cover.jpg
 description: |
-  This is a minimal example of using the bookdown package to write a book.
-  The HTML output format for this example is bookdown::bs4_book,
-  set in the _output.yml file.
+  Guide de survie de l'OsstidBurn.
 biblio-style: apalike
 csl: chicago-fullnote-bibliography.csl
 bookdown::bs4_book:
@@ -24,19 +22,23 @@ bookdown::bs4_book:
 
 # LE GUIDE QUE TU DOIS ABSOLUMENT LIRE {-}
 
-<h2><span> AVANT-PROPOS </span></h2> 
-
-Tout à L’OsstidBurn est organisé et géré par des volontaires.  Le volontariat, c’est une belle façon de contribuer et de participer à l’événement. Il existe plusieurs façons de s’impliquer: Accueil, Premiers Soins, Rangers, Sanctuaire, Périmètre du Feu, Département public de la  
-Wouérie (DPW), etc. 
+<img src="www/logo.png"  width=100% height=50%>
 
 
-Toutes les personnes participant à L’OsstidBurn sont invitées à combler un minimum de deux postes durant l’événement. À l’achat de votre billet, vous avez reçu le lien vers la plateforme de volontariat (ci-dessous). Allez choisir vos quarts dès maintenant si ce n’est pas déjà fait! 
-Assurez-vous d’avoir un billet avant de vous y inscrire; s’inscrire ne donne pas accès à  
-un billet. ;-)  
+<h2><span> FOREWORD </span></h2> 
+
+Everything at L’OsstidBurn is organized and run by volunteers.  
+
+Volunteering is a great way to contribute and participate in the event. There are many ways  to get involved: Gate, First Aid, Rangers, Sanctuary, Fire Perimeter, Department of  Public Works (DPW), etc.
+
+All L’OsstidBurn participants are encouraged to take on a minimum of two shifts during the event. When you purchased your ticket, you received the link to the volunteer platform (below). Go pick your shifts now if you haven’t already!
+
+Make sure you have a ticket first – signing up for shifts will not get you a ticket. ;-) 
+  
 
 https://participation.losstidburn.org
 
-Ensuite, n’oubliez pas de mettre à jour vos informations! 
+Then, don’t forget to update your information!
 
 
 ```{r, eval=FALSE, include = FALSE}
