added carpooling link

--- a/03-billets.Rmd
+++ b/03-billets.Rmd
@@ -49,7 +49,11 @@ Bring hand trucks, wagons, ropes, etc. to transport your equipment. Parking is a
 The L'OsstidBurn site has a limited capacity to accommodate cars.  The parking team works miracles every year to guide you when you arrive.
 
 If you drive to l’OsstidBurn,  <span style="text-decoration:underline">**IT IS MANDATORY to have a parking pass (car or RV). You need one parking pass for each vehicle.**</span>
- 
-Stationnement & Bus pour L'OsstidBurn 2022 Billets | Eventbrite
 
+Do you have free space in your car? We suggest carpooling.
+It's good for the environment and it reduces the number of cars in the site.
+Clink on this [link](https://www.groupcarpool.com/t/qtayhw) to set up a carpool.
+
+ 
+Stationnement & Bus pour L'OsstidBurn 2022 Billets | Eventbrite **not working, will be updated soon**
 
