added link for bus/parking pass, added new chapter neighbors

--- a/04-billets.Rmd
+++ b/04-billets.Rmd
@@ -49,10 +49,11 @@ Le site de L'OsstidBurn a une capacité limitée pour accueillir des véhicules.
 
 Si vous venez en voiture,  <span style="text-decoration:underline">**IL EST OBLIGATOIRE d'avoir votre passe de stationnement (voiture ou VR). Vous devez avoir une passe de stationnement pour chaque voiture.**</span>
 
+Pour obtenir un passe de stationnement, ou un **ticket pour le bus d'Osstidburn**, veuillez accéder le site web : https://participation.losstidburn.org/
+
 Vous avez de la place disponible dans votre voiture? Encouragez le covoiturage.
 C’est bon pour l’environnement et ça permet de réduire le nombre de voiture sur le site 
 Voici le [lien de covoiturage de l'OsstidBurn](https://www.groupcarpool.com/t/qtayhw) pour en organiser un. 
  
-Stationnement & Bus pour L'OsstidBurn 2023 Billets | Eventbrite **va être mis à jour bientôt**
 
 
