overall updates for the 2025 edition - french version

--- a/09-ce_que_tu_dois_apporter.Rmd
+++ b/09-ce_que_tu_dois_apporter.Rmd
@@ -7,7 +7,8 @@
 * Râteaux, gants de travail, petite hache, sécateurs pour dégager un espace pour votre campement.  
 * Eau: Aucune source d’eau ne sera disponible sur  place. Nous conseillons 3L par personne et par jour.  
 * Nourriture 
-* Tente & Bâche 
+* Tente
+* Bâches (Il pleut souvant pendant les dates de l'Osstidburn)
 * Un ou plusieurs sacs de couchage, couvertures, manteaux, etc. (Prévoir assez de trucs chauds pour être confortable lors des nuits fraîches - ça prend plus qu’on pourrait penser!)  
 * Cuisinière, glacière, bol, ustensiles, combustible, casserole et accessoires de cuisine… 
 * Extincteur 
