--- a/13-les_burns.Rmd
+++ b/13-les_burns.Rmd
@@ -2,7 +2,7 @@
 
 
 <img src="www/picture_burn.jpg"  width=100% height=50%>
-*crédits : Andrew Miller - https://www.awesomephotography.ca/*
+*crédits : Andrew Miller*
 
 <h2><span>EFFIGIE & TEMPLE</span></h2> 
 
