small edits for the 2025 version

--- a/13-les_burns.Rmd
+++ b/13-les_burns.Rmd
@@ -7,9 +7,9 @@
 <h2><span>EFFIGIE & TEMPLE</span></h2> 
 
 
-La cérémonie du Burn de l’Effigie est prévue le samedi au coucher du soleil. 
+La cérémonie du Burn de l’Effigie est prévue le dimahche au coucher du soleil. 
 
-Le Temple est un espace intentionnel de co-création. Une équipe de bénévoles a construit un monument qui servira de canevas libre pour notre apaisement et lâcher-prise collectif. Au cours de l'événement, les OsstidBurners peuvent écrire des messages, laisser des souvenirs, passer un moment dans le calme, se livrer à une cérémonie, ou tout ce qui a une signification pour elleux dans le but de commémorer les choses dont iels aimeraient se départir. Si ce n'est pas ton truc, pas de problème. Veuillez toutefois traiter cet espace et les objets personnels et importants qui s'y trouvent avec respect. Si vous restez jusqu'à la fin de l'événement, vous aurez le privilège de vivre l'expérience du Burn du Temple, au cours duquel nous observons, en tant que communauté, l'acte transformateur de brûler tout ce que nous sommes prêt.e.s à laisser derrière nous. La cérémonie du Burn du Temple est prévue le dimanche au coucher du soleil. 
+Le Temple est un espace intentionnel de co-création. Une équipe de bénévoles a construit un monument qui servira de canevas libre pour notre apaisement et lâcher-prise collectif. Au cours de l'événement, les OsstidBurners peuvent écrire des messages, laisser des souvenirs, passer un moment dans le calme, se livrer à une cérémonie, ou tout ce qui a une signification pour elleux dans le but de commémorer les choses dont iels aimeraient se départir. Si ce n'est pas ton truc, pas de problème. Veuillez toutefois traiter cet espace et les objets personnels et importants qui s'y trouvent avec respect. Si vous restez jusqu'à la fin de l'événement, vous aurez le privilège de vivre l'expérience du Burn du Temple, au cours duquel nous observons, en tant que communauté, l'acte transformateur de brûler tout ce que nous sommes prêt.e.s à laisser derrière nous. La cérémonie du Burn du Temple est prévue le lundi au coucher du soleil. 
 
 
 Si vous souhaitez participer au périmètre de sécurité du Burn de l’Effigie ou du Temple, inscrivez-vous via la plateforme d’inscription des volontaires:
@@ -42,6 +42,6 @@ En raison d’un risque de propagation de feu, ne jonglez pas avec du feu ailleu
 
 **ESPACE JAM DE FEU**
 
-En dehors du Conclave, il n’y a pas d’espace Jam de Feu prévu pour l’édition 2024 car nous ne possédons pas d’assurances à cet effet. Si vous désirez créer et gérer votre propre espace et que vous possédez des assurances, écrivez-nous à : 
+En dehors du Conclave, il n’y a pas d’espace Jam de Feu prévu pour l’édition 2025 car nous ne possédons pas d’assurances à cet effet. Si vous désirez créer et gérer votre propre espace et que vous possédez des assurances, écrivez-nous à : 
 
 participation@losstidburn.org
