--- a/03-arrivees.Rmd
+++ b/03-arrivees.Rmd
@@ -4,7 +4,7 @@ We strongly recommend arriving during the light of day. The site is located in t
 
 <h2><span> EARLY ARRIVALS </span></h2> 
 
-* 19 June - Thursday: 9AM to 12PM  
+* 19 June - Thursday: 9AM to 12AM (midnight) 
 
 <h2><span> GENERAL ACCESS </span></h2> 
 
@@ -18,6 +18,6 @@ We strongly recommend arriving during the light of day. The site is located in t
 
 <h2><span> LEAVE NO TRACE (MOOP SWEEP) </span></h2> 
 
-* 24 June - Tuesday: 2PM to 6PM
+* 24 June - Tuesday: 2PM to 6:30PM
 
 
