--- a/14-dernieres_infos.Rmd
+++ b/14-dernieres_infos.Rmd
@@ -2,7 +2,7 @@
 
 <h2><span>OBJETS TROUVÉS</span></h2>
 
-Cette année, la station de Lost & Found se situera ‘’HQ Sécurité’’. Adressez-vous aux équipes présentes sur place afin d’y déposer tout objet trouvé ou retrouver “votre précieux”. 
+Cette année, la station de Lost & Found se situera dans "HQ Sécurité". Adressez-vous aux équipes présentes sur place afin d’y déposer tout objet trouvé ou retrouver “votre précieux”. 
 
 
 <h2><span>EXODUS</span></h2>
