--- a/08-consentement.Rmd
+++ b/08-consentement.Rmd
@@ -58,10 +58,11 @@ Notre rôle est préventif autant que réactif : être présent·e·s avant que 
 
 Pour joindre le Comité Conduite, vous pouvez écrire à conduite@losstidburn.org. Ce courriel est reçu par Camille C., Elizabeth V., Antonia S., Cléo G. et Meddy B..
 Si l’une de ces personnes est impliquée dans la situation ou si, pour toute autre raison, vous préférez qu’elle ne voie pas votre message, vous pouvez contacter directement au moins deux personnes du comité à leur adresse individuelle :
-camille@losstidburn.org
-cleo@losstidburn.org
-elizabeth@losstidburn.org
-antonia@losstidburn.org
+
+* camille@losstidburn.org
+* cleo@losstidburn.org
+* elizabeth@losstidburn.org
+* antonia@losstidburn.org
 
 À noter : l’adresse consentement@losstidburn.org reste active pour le moment. Elle est accessible uniquement par Elizabeth V. et Antonia S., afin d'assurer la continuité de traitement des messages envoyés à l’ancien comité.
 
