mega modifs camille

--- a/13-dernieres_infos.Rmd
+++ b/13-dernieres_infos.Rmd
@@ -2,11 +2,11 @@
 
 <h2><span>OBJETS TROUVÉS</span></h2>
 
-Cette année, la station de Lost & Found se situera dans le ‘’HQ Sécurité’’. Adressez-vous aux équipes présentes sur place afin d’y déposer tout objet trouvé ou afin de retrouver “votre précieux”. 
+Cette année, la station de Lost & Found se situera dans le "HQ Sécurité". Adressez-vous aux équipes présentes sur place afin d’y déposer tout objet trouvé ou afin de retrouver “votre précieux”. 
 
 <h2><span>EXODUS</span></h2>
 
-Mardi 24 juin 6:00 à 14h00  
+Mardi 24 juin 5:00 à 14h00  
 
 Repartez avec tout ce que vous avez apporté! 
 
